polish for release

--- a/crossbar2/Makefile
+++ b/crossbar2/Makefile
@@ -28,5 +28,5 @@ test_cli:
 publish: clean
 	python setup.py register
 	python setup.py sdist upload
-	python setup.py bdist_egg upload
-	python setup.py bdist_wininst upload
+	#python setup.py bdist_egg upload
+	#python setup.py bdist_wininst upload
