--- a/crossbar2/Makefile
+++ b/crossbar2/Makefile
@@ -3,12 +3,8 @@ all:
 	@echo ""
 	@echo "   install          Local install"
 	@echo "   clean            Cleanup"
-	@echo "   build            Clean build"
 	@echo "   publish          Clean build and publish to PyPI"
 	@echo ""
-
-build:
-	python setup.py bdist_egg
 
 install:
 	python setup.py install
@@ -20,13 +16,8 @@ clean:
 	find . -name "*.pyc" -exec rm -f {} \;
 
 test:
-	twistd.py -n crossbar
-
-test_cli:
-	python -m crossbar.cli
+	PYTHONPATH=. python -m crossbar.cli -d start
 
 publish: clean
 	python setup.py register
 	python setup.py sdist upload
-	#python setup.py bdist_egg upload
-	#python setup.py bdist_wininst upload
