moved demo application components to own repo, vairious cleanups

--- a/crossbar2/Makefile
+++ b/crossbar2/Makefile
@@ -20,6 +20,9 @@ clean:
 init:
 	PYTHONPATH=. python -m crossbar.cli init
 
+init_demos:
+	PYTHONPATH=. python -m crossbar.cli init --template demos
+
 start:
 	PYTHONPATH=. python -m crossbar.cli start
 
