--- a/crossbar/Makefile
+++ b/crossbar/Makefile
@@ -13,22 +13,22 @@ clean:
 	rm -rf ./build
 	rm -rf ./dist
 	rm -rf ./crossbar.egg-info
-	rm -rf ./.crossbar
+	#rm -rf ./.crossbar
 	find . -name "*.db" -exec rm -f {} \;
 	find . -name "*.pyc" -exec rm -f {} \;
 	find . -name "*.log" -exec rm -f {} \;
 
 init:
-	PYTHONPATH=. python -m crossbar.node.cli init
+	PYTHONPATH=. python -m crossbar.controller.cli init
 
 init_demos:
-	PYTHONPATH=. python -m crossbar.node.cli init --template demos
+	PYTHONPATH=. python -m crossbar.controller.cli init --template demos
 
 check:
-	PYTHONPATH=. python -m crossbar.node.cli check
+	PYTHONPATH=. python -m crossbar.controller.cli check
 
 start:
-	PYTHONPATH=. python -m crossbar.node.cli start
+	PYTHONPATH=. python -m crossbar.controller.cli start
 
 publish: clean
 	python setup.py register
