--- a/crossbar/Makefile
+++ b/crossbar/Makefile
@@ -29,11 +29,11 @@ init:
 	PYTHONPATH=. python -m crossbar.controller.cli init
 
 init_hello_python:
-	rm -rf test_hello
-	PYTHONPATH=. python -m crossbar.controller.cli init --template hello:python --appdir test_hello
+	rm -rf ${HOME}/cbtest_hello
+	PYTHONPATH=. python -m crossbar.controller.cli init --template hello:python --appdir ${HOME}/cbtest_hello
 
 start_hello_python:
-	PYTHONPATH=. python -m crossbar.controller.cli start --cbdir test_hello/.crossbar
+	PYTHONPATH=. python -m crossbar.controller.cli start --cbdir ${HOME}/cbtest_hello/.crossbar
 
 init_demos:
 	PYTHONPATH=. python -m crossbar.controller.cli init --template demos
