--- a/crossbar/crossbar/templates/hello/python/.crossbar/config.json
+++ b/crossbar/crossbar/templates/hello/python/.crossbar/config.json
@@ -10,7 +10,7 @@
          },
          "realms": [
             {
-               "name": "{{ realm_id }}",
+               "name": "{{ realm }}",
                "roles": [
                   {
                      "name": "anonymous",
@@ -49,7 +49,7 @@
             {
                "type": "class",
                "classname": "{{ appname }}.{{ appname }}.AppSession",
-               "realm": "{{ realm_id }}"
+               "realm": "{{ realm }}"
             }
          ]
       }
