--- a/docs/SConstruct
+++ b/docs/SConstruct
@@ -23,6 +23,7 @@ SVG_FILES = ['crossbar_deployment_01.svg',
              'crossbar_deployment_05.svg',
              'crossbar_deployment_06.svg',
              'crossbar_deployment_07.svg',
+             'crossbar_clients.svg'
              ]
 
 IMG_SOURCE_DIR = "figures"
