--- a/docs/SConstruct
+++ b/docs/SConstruct
@@ -23,7 +23,8 @@ SVG_FILES = ['crossbar_deployment_01.svg',
              'crossbar_deployment_05.svg',
              'crossbar_deployment_06.svg',
              'crossbar_deployment_07.svg',
-             'crossbar_clients.svg'
+             'crossbar_clients.svg',
+             'crossbar_integration.svg'
              ]
 
 IMG_SOURCE_DIR = "figures"
