add more figures

--- a/docs/SConstruct
+++ b/docs/SConstruct
@@ -18,6 +18,7 @@
 
 SVG_FILES = ['crossbar_deployment_00.svg',
              'crossbar_deployment_00b.svg',
+             'crossbar_deployment_00c.svg',
              'crossbar_deployment_01.svg',
              'crossbar_deployment_02.svg',
              'crossbar_deployment_03.svg',
