--- a/docs/SConstruct
+++ b/docs/SConstruct
@@ -28,6 +28,8 @@ SVG_FILES = ['crossbar_deployment_00.svg',
              'crossbar_deployment_07.svg',
              'crossbar_application_scenario_1.svg',
              'crossbar_application_scenario_2.svg',
+             'crossbar_application_scenario_3.svg',
+             'crossbar_application_scenario_4.svg',
              'crossbar_clients.svg',
              'crossbar_integration.svg'
              ]
