add PHP app template

--- a/crossbar/crossbar/templates/hello/php/.crossbar/config.json
+++ b/crossbar/crossbar/templates/hello/php/.crossbar/config.json
@@ -41,6 +41,12 @@
                }
             }
          ]
+      },
+      {
+         "type": "guest",
+         "executable": "/usr/bin/php",
+         "arguments": ["client.php"],
+         "workdir": ".."
       }
    ]
 }
