add c++ app template

--- a/crossbar/crossbar/templates/hello/cpp/.crossbar/config.json
+++ b/crossbar/crossbar/templates/hello/cpp/.crossbar/config.json
@@ -1,3 +1,4 @@
+
 {
    "controller": {
    },
@@ -6,7 +7,7 @@
          "type": "router",
          "realms": [
             {
-               "name": "realm1",
+               "name": "{{ realm }}",
                "roles": [
                   {
                      "name": "anonymous",
@@ -33,22 +34,26 @@
                "paths": {
                   "/": {
                      "type": "static",
-                     "directory": "../web/"
+                     "directory": "../web"
                   },
                   "ws": {
                      "type": "websocket"
                   }
                }
-            },
-            {
-               "type": "rawsocket",
-               "endpoint": {
-                  "type": "tcp",
-                  "port": 8090
-               },
-               "serializer": "msgpack"
             }
          ]
+      },
+      {
+         "type": "guest",
+         "executable": "{{ nodejs }}",
+         "arguments": ["{{ appname }}.js"],
+         "options": {
+            "workdir": "../node",
+            "watch": {
+               "directories": ["../node"],
+               "action": "restart"
+            }
+         }
       }
    ]
 }
