--- a/crossbar/crossbar/templates/hello/cpp/.crossbar/config.json
+++ b/crossbar/crossbar/templates/hello/cpp/.crossbar/config.json
@@ -49,6 +49,11 @@
                "serializer": "msgpack"
             }
          ]
+      },
+      {
+         "type": "guest",
+         "executable": "../hello",
+         "arguments": []
       }
    ]
 }
