pimp up template

--- a/crossbar/crossbar/templates/hello/python/.crossbar/config.json
+++ b/crossbar/crossbar/templates/hello/python/.crossbar/config.json
@@ -44,12 +44,27 @@
                   }
                }
             }
-         ],
+         ]
+      },
+      {
+         "type": "container",
+         "options": {
+            "pythonpath": [".."]
+         },
          "components": [
             {
                "type": "class",
                "classname": "{{ appname }}.{{ appname }}.AppSession",
-               "realm": "{{ realm }}"
+               "realm": "{{ realm }}",
+               "transport": {
+                  "type": "websocket",
+                  "endpoint": {
+                     "type": "tcp",
+                     "host": "127.0.0.1",
+                     "port": 8080
+                  },
+                  "url": "ws://127.0.0.1:8080/ws"
+               }
             }
          ]
       }
