--- a/crossbar/crossbar/templates/hello/php/.crossbar/config.json
+++ b/crossbar/crossbar/templates/hello/php/.crossbar/config.json
@@ -45,8 +45,7 @@
       {
          "type": "guest",
          "executable": "/usr/bin/php",
-         "arguments": ["client.php"],
-         "workdir": ".."
+         "arguments": ["../client.php"]
       }
    ]
 }
