--- a/crossbar/crossbar/templates/hello/erwa/relx.config
+++ b/crossbar/crossbar/templates/hello/erwa/relx.config
@@ -1,3 +1,3 @@
-{release, {simple_client, "1"}, [simple_client]}.
+{release, {crossbar_client, "1"}, [crossbar_client]}.
 {extended_start_script, true}.
 {sys_config, "rel/sys.config"}.
