fixes #116 - updated realm in votes app template

--- a/crossbar/crossbar/templates/votes/browser/.crossbar/config.json
+++ b/crossbar/crossbar/templates/votes/browser/.crossbar/config.json
@@ -7,7 +7,7 @@
          "type": "router",
          "realms": [
             {
-               "name": "realm1",
+               "name": "votesapp",
                "roles": [
                   {
                      "name": "anonymous",
