some demo template adjustments

--- a/crossbar/crossbar/templates/hello/java/.crossbar/config.json
+++ b/crossbar/crossbar/templates/hello/java/.crossbar/config.json
@@ -45,7 +45,7 @@
       },
       {
          "type": "guest",
-         "executable": "/usr/bin/java",
+         "executable": "java",
          "arguments": [
             "-classpath", "./target/classes:./target/dependency/*",
             "ws.wamp.jawampa.CrossbarExample",
