--- a/crossbar/crossbar/templates/hello/nodejs/.crossbar/config.json
+++ b/crossbar/crossbar/templates/hello/nodejs/.crossbar/config.json
@@ -44,7 +44,7 @@
       },
       {
          "type": "guest",
-         "executable": "{{ nodejs }}",
+         "executable": "node",
          "arguments": ["{{ appname }}.js"],
          "options": {
             "workdir": "../node",
