--- a/crossbar/crossbar/templates/votes/nodejs/.crossbar/config.json
+++ b/crossbar/crossbar/templates/votes/nodejs/.crossbar/config.json
@@ -44,7 +44,7 @@
       },
       {
          "type": "guest",
-         "executable": "{{ nodejs }}",
+         "executable": "node",
          "arguments": ["backend.js"],
          "options": {
             "workdir": "../node",
