--- a/crossbar/tox.ini
+++ b/crossbar/tox.ini
@@ -23,12 +23,16 @@ basepython = python2.7
 deps =
    twisted
    mock
+   coverage
 commands =
    sh -c "which python"
-   sh -c "which trial"
+   sh -c "which coverage"
    python -V
-   trial --version
-   trial crossbar
+   coverage --version
+   {envbindir}/trial --version
+   coverage run {envbindir}/trial crossbar
+   coverage report
+   coverage html
 basepython = python2.7
 install_command = pip install {packages} crossbar[all]
 
