--- a/crossbar/.coveragerc
+++ b/crossbar/.coveragerc
@@ -3,8 +3,10 @@ source = crossbar
 branch = True
 
 [report]
+precision = 2
 exclude_lines =
     def __repr__
     raise AssertionError
     pragma: no cover
+    if self\._debug
     raise NotImplementedError
