--- a/tox.ini
+++ b/tox.ini
@@ -34,7 +34,9 @@ commands =
    coverage report
    coverage html
 basepython = python2.7
-install_command = pip install {packages} crossbar[all]
+install_command = pip install {packages} \
+   https://github.com/tavendo/AutobahnPython/archive/master.zip \
+   crossbar[all]
 
 
 [testenv:pypy2twisted]
@@ -48,4 +50,6 @@ commands =
    trial --version
    trial crossbar
 basepython = pypy
-install_command = pip install {packages} crossbar[all]
+install_command = pip install {packages} \
+   https://github.com/tavendo/AutobahnPython/archive/master.zip \
+   crossbar[all]
