add this because it tries to do something it shouldnt

--- a/tox.ini
+++ b/tox.ini
@@ -17,6 +17,7 @@ deps =
 commands =
    flake8 --ignore=E501 crossbar
 basepython = python2.7
+install_command = pip install {packages} https://github.com/tavendo/AutobahnPython/archive/master.zip crossbar[all]
 
 
 [testenv:py27twisted]
