--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,6 @@ deps =
 commands =
    flake8 --ignore=E501 crossbar
 basepython = python2.7
-install_command = pip install {packages} https://github.com/tavendo/AutobahnPython/archive/master.zip crossbar[all]
 
 
 [testenv:py27twisted]
@@ -25,6 +24,8 @@ deps =
    twisted
    mock
    coverage
+   https://github.com/tavendo/AutobahnPython/archive/master.zip
+   crossbar[all]
 commands =
    sh -c "which python"
    sh -c "which coverage"
@@ -35,13 +36,14 @@ commands =
    coverage report
    coverage html
 basepython = python2.7
-install_command = pip install {packages} https://github.com/tavendo/AutobahnPython/archive/master.zip crossbar[all]
 
 
 [testenv:pypy2twisted]
 deps =
    twisted
    mock
+   https://github.com/tavendo/AutobahnPython/archive/master.zip
+   crossbar[all]
 commands =
    sh -c "which python"
    sh -c "which trial"
@@ -49,4 +51,3 @@ commands =
    trial --version
    trial crossbar
 basepython = pypy
-install_command = pip install {packages} https://github.com/tavendo/AutobahnPython/archive/master.zip crossbar[all]
