more tests for the callee, because everyone *loves* tests

--- a/tox.ini
+++ b/tox.ini
@@ -23,6 +23,7 @@ basepython = python2.7
 [testenv:py27twisted]
 deps =
    twisted
+   treq
    mock
    coverage
    https://github.com/tavendo/AutobahnPython/archive/master.zip
@@ -42,6 +43,7 @@ basepython = python2.7
 [testenv:pypy2twisted]
 deps =
    twisted
+   treq
    mock
    https://github.com/tavendo/AutobahnPython/archive/master.zip
    crossbar[all]
