--- a/tox.ini
+++ b/tox.ini
@@ -40,6 +40,26 @@ commands =
 basepython = python2.7
 
 
+[testenv:py33twisted]
+deps =
+   twisted
+   treq
+   mock
+   pytest
+   coverage
+   https://github.com/tavendo/AutobahnPython/archive/master.zip
+   crossbar[all]
+commands =
+   sh -c "which python"
+   sh -c "which coverage"
+   python -V
+   coverage --version
+   {envbindir}/py.test --version
+   coverage run {envbindir}/py.test crossbar
+   coverage report
+   coverage html
+basepython = python3.3
+
 [testenv:pypy2twisted]
 deps =
    twisted
