--- a/tox.ini
+++ b/tox.ini
@@ -26,6 +26,7 @@ deps =
    treq
    mock
    coverage
+   ordered-set
    https://github.com/tavendo/AutobahnPython/archive/master.zip
    crossbar[all]
 commands =
@@ -47,6 +48,7 @@ deps =
    mock
    pytest
    coverage
+   ordered-set
    https://github.com/tavendo/AutobahnPython/archive/master.zip
    crossbar[all]
 commands =
