also ordered-set

--- a/tox.ini
+++ b/tox.ini
@@ -66,6 +66,7 @@ basepython = python3.3
 deps =
    twisted
    treq
+   ordered-set
    mock
    https://github.com/tavendo/AutobahnPython/archive/master.zip
    crossbar[all]
