improve the tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -5,16 +5,13 @@ envlist = flake8,
 
 
 [testenv]
-deps = pytest
-commands = python -m pytest
 whitelist_externals = sh
 
 
 [testenv:flake8]
+skip_install = True
 deps =
    flake8
-   mock
-   https://github.com/tavendo/AutobahnPython/archive/master.zip
 commands =
    flake8 --ignore=E501 crossbar
 basepython = python2.7
@@ -22,14 +19,11 @@ basepython = python2.7
 
 [testenv:py27twisted]
 deps =
-   twisted
-   treq
    mock
    coverage
-   ordered-set
    https://github.com/tavendo/AutobahnPython/archive/master.zip
-   crossbar[all]
 commands =
+   pip -q install .[all]
    sh -c "which python"
    sh -c "which coverage"
    python -V
@@ -43,15 +37,12 @@ basepython = python2.7
 
 [testenv:py33twisted]
 deps =
-   twisted
-   treq
    mock
    pytest
    coverage
-   ordered-set
    https://github.com/tavendo/AutobahnPython/archive/master.zip
-   crossbar[all]
 commands =
+   pip -q install .[all]
    sh -c "which python"
    sh -c "which coverage"
    python -V
@@ -62,15 +53,13 @@ commands =
    coverage html
 basepython = python3.3
 
+
 [testenv:pypy2twisted]
 deps =
-   twisted
-   treq
-   ordered-set
    mock
    https://github.com/tavendo/AutobahnPython/archive/master.zip
-   crossbar[all]
 commands =
+   pip -q install .[all]
    sh -c "which python"
    sh -c "which trial"
    python -V
