fix up tox, make it install afterwards so autobahn doesn't get overridden

--- a/tox.ini
+++ b/tox.ini
@@ -21,9 +21,9 @@ basepython = python2.7
 deps =
    mock
    coverage
-   https://github.com/tavendo/AutobahnPython/archive/master.zip
 commands =
    pip -q install .[all]
+   pip -q install https://github.com/tavendo/AutobahnPython/archive/master.zip
    sh -c "which python"
    sh -c "which coverage"
    python -V
@@ -40,9 +40,9 @@ deps =
    mock
    pytest
    coverage
-   https://github.com/tavendo/AutobahnPython/archive/master.zip
 commands =
    pip -q install .[all]
+   pip -q install https://github.com/tavendo/AutobahnPython/archive/master.zip
    sh -c "which python"
    sh -c "which coverage"
    python -V
@@ -57,9 +57,9 @@ basepython = python3.3
 [testenv:pypy2twisted]
 deps =
    mock
-   https://github.com/tavendo/AutobahnPython/archive/master.zip
 commands =
    pip -q install .[all]
+   pip -q install https://github.com/tavendo/AutobahnPython/archive/master.zip
    sh -c "which python"
    sh -c "which trial"
    python -V
