install trunk twisted for now

--- a/tox.ini
+++ b/tox.ini
@@ -43,6 +43,7 @@ deps =
 commands =
    pip -q install .[all]
    pip -q install https://github.com/tavendo/AutobahnPython/archive/master.zip
+   pip -q install -U https://github.com/twisted/twisted/archive/trunk.zip
    sh -c "which python"
    sh -c "which coverage"
    python -V
