--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,5 @@
 [tox]
-envlist = flake8,
-          py27twisted,
-          pypy2twisted
-
-
-[testenv]
-whitelist_externals = sh
+envlist = flake8, {py27,pypy,py33,py34}-{twtrunk, twcurrent}
 
 
 [testenv:flake8]
@@ -17,10 +11,13 @@ commands =
 basepython = python2.7
 
 
-[testenv:py27twisted]
+[testenv]
+whitelist_externals = sh
 deps =
    mock
    coverage
+   twcurrent: Twisted
+   twtrunk: https://github.com/twisted/twisted/archive/trunk.zip
 commands =
    pip -q install .[all]
    pip -q install https://github.com/tavendo/AutobahnPython/archive/master.zip
@@ -32,38 +29,3 @@ commands =
    coverage run {envbindir}/trial crossbar
    coverage report
    coverage html
-basepython = python2.7
-
-
-[testenv:py33twisted]
-deps =
-   mock
-   pytest
-   coverage
-commands =
-   pip -q install .[all]
-   pip -q install https://github.com/tavendo/AutobahnPython/archive/master.zip
-   pip -q install -U https://github.com/twisted/twisted/archive/trunk.zip
-   sh -c "which python"
-   sh -c "which coverage"
-   python -V
-   coverage --version
-   {envbindir}/py.test --version
-   coverage run {envbindir}/py.test crossbar
-   coverage report
-   coverage html
-basepython = python3.3
-
-
-[testenv:pypy2twisted]
-deps =
-   mock
-commands =
-   pip -q install .[all]
-   pip -q install https://github.com/tavendo/AutobahnPython/archive/master.zip
-   sh -c "which python"
-   sh -c "which trial"
-   python -V
-   trial --version
-   trial crossbar
-basepython = pypy
