make the tools able to handle the syntax error

--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,16 @@
 [tox]
 envlist = flake8, {py27,pypy,py33,py34}-{twtrunk,twcurrent}
 
+[flake8]
+ignore = E501
+exclude = crossbar/worker/test/examples/syntaxerror.py
 
 [testenv:flake8]
 skip_install = True
 deps =
    flake8
 commands =
-   flake8 --ignore=E501 crossbar
+   flake8 crossbar
 basepython = python2.7
 
 
