--- a/tox.ini
+++ b/tox.ini
@@ -30,5 +30,8 @@ commands =
    coverage --version
    {envbindir}/trial --version
    coverage run {envbindir}/trial crossbar
+   coverage combine
    coverage report
    coverage html
+setenv =
+   COVERAGE_PROCESS_START = 1
