erase the existing coverage

--- a/tox.ini
+++ b/tox.ini
@@ -29,6 +29,7 @@ commands =
    python -V
    coverage --version
    {envbindir}/trial --version
+   coverage erase
    coverage run {envbindir}/trial crossbar
    coverage combine
    coverage report
