enable more test envs

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,14 @@ install:
 
 env:
   - TOX_ENV=flake8
-  - TOX_ENV=py27-twcurrent
-  - TOX_ENV=pypy-twcurrent
-  - TOX_ENV=py27-twtrunk
-  - TOX_ENV=py33-twtrunk
-  - TOX_ENV=py34-twtrunk
-  - TOX_ENV=pypy-twtrunk
+  - TOX_ENV=py27-twtrunk-abtrunk
+  - TOX_ENV=py33-twtrunk-abtrunk
+  - TOX_ENV=py34-twtrunk-abtrunk
+  - TOX_ENV=pypy-twtrunk-abtrunk
+  - TOX_ENV=py27-twcurrent-abcurrent
+  - TOX_ENV=py33-twcurrent-abcurrent
+  - TOX_ENV=py34-twcurrent-abcurrent
+  - TOX_ENV=pypy-twcurrent-abcurrent
 
 script:
   - tox -c tox.ini -e $TOX_ENV
