--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = flake8, {py27,pypy,py33,py34}-{twtrunk,twcurrent}
+envlist = flake8, {py27,pypy,py33,py34}-{twtrunk,twcurrent}-{abtrunk,abcurrent}
 
 [flake8]
 ignore = E501
@@ -19,11 +19,12 @@ whitelist_externals = sh
 deps =
    mock
    coverage
+   abcurrent: autobahn
+   abtrunk: https://github.com/tavendo/AutobahnPython/archive/master.zip
    twcurrent: Twisted
    twtrunk: https://github.com/twisted/twisted/archive/trunk.zip
 commands =
    pip -q install .[all]
-   pip -q install https://github.com/tavendo/AutobahnPython/archive/master.zip
    sh -c "which python"
    sh -c "which coverage"
    python -V
