--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,17 @@ sudo: false
 install:
   - pip install tox codecov
 
+# PyPy is deactivated for now due to:
+# https://github.com/crossbario/crossbar/issues/440
+# https://github.com/travis-ci/travis-ci/issues/4756
 env:
   - TOX_ENV=flake8
   - TOX_ENV=py27-twtrunk-abtrunk
-  - TOX_ENV=pypy-twtrunk-abtrunk
+#  - TOX_ENV=pypy-twtrunk-abtrunk
   - TOX_ENV=py33-twtrunk-abtrunk
   - TOX_ENV=py34-twtrunk-abtrunk
   - TOX_ENV=py27-twcurrent-abcurrent
-  - TOX_ENV=pypy-twcurrent-abcurrent
+#  - TOX_ENV=pypy-twcurrent-abcurrent
   - TOX_ENV=py33-twcurrent-abcurrent
   - TOX_ENV=py34-twcurrent-abcurrent
 
