--- a/tox.ini
+++ b/tox.ini
@@ -34,8 +34,8 @@ commands =
    coverage erase
    coverage run {envbindir}/trial crossbar
    coverage combine
-   coverage report --include 'crossbar/*'
+   coverage report
    coverage html
 setenv =
-   COVERAGE_PROCESS_START = 1
+   COVERAGE_PROCESS_START = .coveragerc
    {py27,py33,py34}: CB_FULLTESTS = 1
