--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,6 @@
 envlist = flake8, {py27,pypy,py33,py34}-{twtrunk,twcurrent}-{abtrunk,abcurrent}
 
 [flake8]
-ignore = E501,N801,N802,N803,N805,N806
 exclude = crossbar/worker/test/examples/syntaxerror.py
 
 [testenv:flake8]
@@ -10,7 +9,7 @@ skip_install = True
 deps =
    flake8
 commands =
-   flake8 crossbar
+   flake8 --ignore=E501,N801,N802,N803,N805,N806 crossbar
 basepython = python2.7
 
 
