--- a/tox.ini
+++ b/tox.ini
@@ -31,7 +31,7 @@ commands =
    coverage --version
    {envbindir}/trial --version
    coverage erase
-   coverage run {envbindir}/trial crossbar
+   coverage run {envbindir}/trial {posargs:crossbar}
    coverage combine
    coverage report
    coverage html
